--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,12 @@
   <title>{% if page.title %}{{ page.title | escape }} - {{ l.site-title | escape }}{% else %}{{ l.site-title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="shortcut icon" href="{{"/asserts/favicon.ico" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="shortcut icon" href="/asserts/favicon.ico">
   <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
-  <link rel="stylesheet" href="{{ "/asserts/css/bootstrap.min.css" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="stylesheet" href="{{ "/asserts/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="stylesheet" href="/asserts/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/asserts/css/main.css">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
 
   <!-- Translations for this page -->
   {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
