--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
   <div class="wrapper container">
 
-    <a class="site-title" href="{{ site.baseurl }}/{{ l.lang-url }}">
+    <a class="site-title" href="/{{ l.lang-url }}">
       <img src="/asserts/img/activate.png" alt="{{ l.site-title }}" class="brand"></a>
 
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,9 +12,9 @@
     </button>
 
     <div class="trigger collapse navbar-collapse" id="CollapsingNavbar">
-      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}faq/">{{ l.faq }}</a>
-      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}roadmap/">{{ l.roadmap }}</a>
-      <a class="page-link" href="{{ site.baseurl }}/{{ l.lang-url }}participation/">{{ l.participation }}</a>
+      <a class="page-link" href="/{{ l.lang-url }}faq/">{{ l.faq }}</a>
+      <a class="page-link" href="/{{ l.lang-url }}roadmap/">{{ l.roadmap }}</a>
+      <a class="page-link" href="/{{ l.lang-url }}participation/">{{ l.participation }}</a>
     </div>
 
     <div id="tabzilla" class="hidden-xs">
