--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
   <link rel="stylesheet" href="/asserts/css/bootstrap.min.css">
   <link rel="stylesheet" href="/asserts/css/main.css">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="/feed.xml">
 
   <!-- Translations for this page -->
