--- a/_includes/page-languages.html
+++ b/_includes/page-languages.html
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <p class="language-list text-left">{{ l.languages }}: {% for page in pages %} <a  class="{{ page.lang }}" title="{{ page.title }}" href="{{ page.url | prepend: site.baseurl }}">{{page.lang}}</a> {% endfor %}</p>
+    <p class="language-list text-left">{{ l.languages }}: {% for page in pages %} <a  class="{{ page.lang }}" title="{{ page.title }}" href="{{ page.url | prepend: site.url }}">{{page.lang}}</a> {% endfor %}</p>
   </div>
   <div class="col-md-6">
     <p class="add-translation text-right"><a href="https://github.com/mozilla/activate.mozilla.community#submit-a-new-localization">{{ l.submit-translation }}</a></p>
