[Fixes #82] Size up the hamburger button

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,6 +26,11 @@
     a.page-link:hover {
         color: #F8F273;
     }
+
+    button.navbar-toggle {
+        margin: 0px;
+        font-size: 1.5em;
+    }
 }
 
 .site-title {
