[Fixes #56] Change Activity Categories

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,6 +9,8 @@
 
     {% include header.html %}
 
+    {% include jumbotron.html %}
+
     <div class="page-content">
       <div class="wrapper container">
         <div class="home">
