--- a/asserts/css/main.scss
+++ b/asserts/css/main.scss
@@ -6,8 +6,8 @@
 
 
 // Our variables
-$base-font-family: 'Fira Sans' Arial, sans-serif;
-$base-font-size:   1rem;
+$base-font-family: 'Fira Sans', Arial, sans-serif;
+$base-font-size:   18px;
 $base-font-weight: 300;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
