[Fixes #92] Maker Party CTA

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,9 @@
         experience and shaping the future of the web for the public good. Visit us at
         <a target="_blank" href="//mozilla.org">mozilla.org</a>
       </p>
+      <div class="post-languages">
+        {% include page-languages.html %}
+      </div>
     </div>
 
   </div>
