--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,14 +15,11 @@
       <div class="wrapper container">
         <div class="home">
           {{ content }}
-
-          <div class="post-languages">
-            {% include page-languages.html %}
-          </div>
-
         </div>
       </div>
     </div>
+
+    {% include cta.html %}
 
     {% include footer.html %}
 
