--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -92,6 +92,31 @@
     }
 }
 
+.cta {
+    background-color: #19b3b7;
+    margin-top: -48px;
+
+    img {
+        padding: 30px;
+        max-width: 190px;
+    }
+
+    .lead {
+        color: white;
+        padding: 30px 30px 0 30px;
+        font-size: 1.1em;
+    }
+
+    .btn {
+        display: inline-block;
+        margin: 0 30px 30px 30px;
+    }
+}
+
+.index-notice {
+    margin-bottom: 30px;
+}
+
 
 /**
  * Site footer
@@ -103,7 +128,7 @@
     font-size: 0.9em;
     line-height: 1.3;
     width: 100%;
-    margin: 1em 0 0;
+    margin: 0;
 
     .icons {
         margin-bottom: 20px;
@@ -154,7 +179,7 @@
         align-items: center;
         flex-shrink: 0;
         justify-content: center;
-        max-width: 45rem;
+        max-width: 55rem;
         margin: 0 auto;
 
         a.logo {
@@ -226,10 +251,6 @@
         max-width: 80px;
     }
 
-    .home-img {
-        max-width: 150px;
-    }
-
     .activity {
         background-color: #eee;
         padding: 10px;
@@ -263,10 +284,15 @@
     .area {
         text-align: center;
 
-        span {
+        span.area-title {
             display: block;
             margin-bottom: 10px;
             font-weight: bold;
+        }
+
+        span.area-text {
+            display: block;
+            margin-bottom: 10px;
         }
 
         &.area-small {
@@ -275,6 +301,16 @@
             img {
                 max-width: 100px;
             }
+        }
+
+        .home-img {
+            max-width: 150px;
+            margin-bottom: 10px;
+        }
+
+        .btn {
+            clear: both;
+            margin-top: 10px;
         }
     }
 
@@ -409,7 +445,9 @@
 
 .post-languages {
     clear: both;
-    padding-top: 4em;
+    padding-left: 10px;
+    margin-left: 10px;
+    border-left: 1px solid #666;
 
     @include media-query($on-laptop) {
         .language-list,
@@ -420,6 +458,11 @@
 
     a {
         font-weight: normal;
+    }
+
+    .form-control {
+        width: auto;
+        padding: 0;
     }
 }
 
