[Fixes #95] Frontpage links to specific activities categories

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,10 @@
       </div>
     </div>
 
+    <div id="back-top">
+      <a href="#top"><span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span></a>
+    </div>
+
     {% include footer.html %}
 
   </body>
