--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -6,7 +6,7 @@
     <div class="col-md-10">
       <p class="lead">
         Maker Party is in full swing, and the focus this year is on copyright reform in the European Union.
-        Help make a different to bring EU copyright laws up to date, to foster creativity and innovation on the Web.
+        Help make a difference to bring EU copyright laws up to date, to foster creativity and innovation on the Web.
       </p>
       <a class="btn btn-default btn-lg" href="https://www.makerparty.community/" role="button" target="_blank">Learn more</a>
     </div>
