--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
       <a class="page-link" href="/{{ l.lang-url }}faq/">{{ l.faq }}</a>
       <a class="page-link" href="/{{ l.lang-url }}roadmap/">{{ l.roadmap }}</a>
       <a class="page-link" href="/{{ l.lang-url }}participation/">{{ l.participation }}</a>
+      <a class="page-link" href="/{{ l.lang-url }}activities/">{{ l.activities }}</a>
     </div>
 
     <div id="tabzilla" class="hidden-xs">
