Remove prepend code from leaderboard assets

--- a/_layouts/leaderboard.html
+++ b/_layouts/leaderboard.html
@@ -18,10 +18,10 @@
     {% include footer.html %}
 
     {% include js.html %}
-    <script src="{{ "/asserts/js/moment.min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
-    <script src="{{ "/asserts/js/bootstrap-sortable.js" | prepend: site.baseurl | prepend: site.url }}"></script>
-    <script src="{{ "/asserts/js/underscore-min.js" | prepend: site.baseurl | prepend: site.url }}"></script>
-    <script src="{{ "/asserts/js/leaderboard.js" | prepend: site.baseurl | prepend: site.url }}"></script>
+    <script src="/asserts/js/moment.min.js"></script>
+    <script src="/asserts/js/bootstrap-sortable.js"></script>
+    <script src="/asserts/js/underscore-min.js"></script>
+    <script src="/asserts/js/leaderboard.js"></script>
 
   </body>
 
