Move leaderboard css inside head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" href="/asserts/favicon.ico">
   <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
   <link rel="stylesheet" href="/asserts/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/asserts/css/bootstrap-sortable.css">
   <link rel="stylesheet" href="/asserts/css/main.css">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
