--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,7 +1,7 @@
 {% assign l = site.data.l10n.[page.lang] %}
 
 <!DOCTYPE html>
-<html lang="{{ page.lang }}">
+<html lang="{{ page.lang }}" dir="{{ page.pdir }}">
 
   {% include head.html %}
 
