--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,6 +17,7 @@ $spacing-unit:     30px;
 $text-color:       #373a3c;
 $background-color: #fff;
 $brand-color:      #3F4B73;
+$brand-color-lighter: #586BAB;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
