--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,6 +1,6 @@
-<script src="/asserts/js/jquery.min.js"></script>
-<script src="/asserts/js/bootstrap.min.js"></script>
-<script src="/asserts/js/app.js"></script>
+<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/app.js"></script>
 <!-- Analytics -->
 <script>
   if (navigator.doNotTrack !== '1') {
