--- a/_layouts/leaderboard.html
+++ b/_layouts/leaderboard.html
@@ -16,10 +16,10 @@
     {% include footer.html %}
 
     {% include js.html %}
-    <script src="/asserts/js/moment.min.js"></script>
-    <script src="/asserts/js/bootstrap-sortable.js"></script>
-    <script src="/asserts/js/underscore-min.js"></script>
-    <script src="/asserts/js/leaderboard.js"></script>
+    <script src="/assets/js/moment.min.js"></script>
+    <script src="/assets/js/bootstrap-sortable.js"></script>
+    <script src="/assets/js/underscore-min.js"></script>
+    <script src="/assets/js/leaderboard.js"></script>
 
   </body>
 
