--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
   <div class="wrapper container">
 
     <a class="site-title" href="/{{ l.lang-url }}">
-      <img src="/asserts/img/activate.png" alt="{{ l.site-title }}" class="brand"></a>
+      <img src="/assets/img/activate.png" alt="{{ l.site-title }}" class="brand"></a>
 
     <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">
       &#9776;
