Initially hide retired activities and toggle on link click

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -284,6 +284,10 @@
             -ms-flex-direction: column;
             flex-direction: column;
         }
+
+        .hidden {
+          display: none;
+        }
     }
 
     h2 {
