--- a/_includes/fr/activities.html
+++ b/_includes/fr/activities.html
@@ -1,7 +1,7 @@
 <div class="row is-flex">
 <div class="activity-card participation col-md-4">
   <header class="item-header">
-    <img src="https://toolkit.mozilla.org/wp-content/uploads/2016/07/Jobstobedone-336x156.jpg" alt="Header image">
+    <img src="/assets/img/guidelines-header.png" alt="Header image">
   </header>
   <h2><a href="/community-participation-guideline/">Community Participation Guidelines</a></h2>
   <div class="item-content" markdown="1">
