--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,5 +1,6 @@
 <script src="/assets/js/jquery.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
+<script src="/assets/js/jquery.bxslider.min.js"></script>
 <script src="/assets/js/app.js"></script>
 <!-- Analytics -->
 <script>
