--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,17 +14,18 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #373a3c;
-$background-color: #fff;
-$brand-color:      #3f4b73;
-$brand-color-lighter: #586bab;
-
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color-light: #fff;
 $grey-color-dark:  darken($grey-color, 25%);
 $green-color:      #2f8e54;
 $red-color:        #c64a4a;
 $blue-color:       #3161a8;
+
+$text-color:       #373a3c;
+$text-color-light: $grey-color-light;
+$background-color: #fff;
+$brand-color:      #3f4b73;
+$brand-color-lighter: #586bab;
 
 // Width of the content area
 $content-width:    960px;
