--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,14 +15,14 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $grey-color:       #828282;
-$grey-color-light: #fff;
+$grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 $green-color:      #2f8e54;
 $red-color:        #c64a4a;
 $blue-color:       #3161a8;
 
 $text-color:       #373a3c;
-$text-color-light: $grey-color-light;
+$text-color-light: #fff;
 $background-color: #fff;
 $brand-color:      #3f4b73;
 $brand-color-lighter: #586bab;
