--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1>Activate Mozilla</h1>
   <p class="lead">
-    A campaign for Mozillians around the world to have impact in areas key to Mozilla’s mission.
+    The Activate Mozilla campaign aims at the grassroots of volunteer contributions. We want to bring more clarity on what are the most important areas to contribute to at Mozilla right now by providing guidance to mobilizers on how to recruit contributors and create community around meaningful Mozilla projects.
   </p>
 </div>
