--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -70,11 +70,12 @@
 }
 
 .jumbotron {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('/assets/img/photo_top.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url('/assets/img/top-header.png');
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
     border-radius: 0;
+    min-height: 420px;
 
     h1 {
         color: white;
@@ -88,6 +89,8 @@
         margin-bottom: 20px;
         margin-top: 20px;
         font-weight: 300;
+        max-width: 75%;
+        text-align: center;
     }
 }
 
