ES5 approach to filter for tag.

--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -79,3 +79,4 @@ Web Compatibility, the ability for all Web content to run in all browsers, is im
   </footer>
 </div>
 </div>
+<script src="/assets/js/search.js"></script>
