use better sass variable

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -789,7 +789,7 @@ div.facebook {
 
 // Bootstrap Overwrites
 table.sortable > thead th:hover:not([data-defaultsort="disabled"]) {
-  background-color: $brand-color-lighter;
+  background-color: $brand-color-light;
 }
 
 @include media-query($on-laptop) {
